----------------------
* Sort items by time and then by file name. Patch by Jerome Lacoste

CruiseControlItemTest
----------------------
* Fix test failure for people not in Pacific timezone.

cruisecontrol.bat/.sh
----------------------
* Introduce CC_OPTS to easily pass arguments to VM when starting CC. Patch by Arent-Jan Banck
* Use the right xalan.jar (CC-198). Reported by Carlos Sanchez

JMX:
----------------------
* Add ability to get/set the config file via JMX (CC-220). Patch by Allan Wick

P4:
----------------------
* Fix problem where test would fail if Perforce was on the path. Patch by Arent-Jan Banck

PluginXMLHelper:
----------------------
* Can pre-configure plugin subelements, too (CC-299). Patch by Jerome Lacoste.
* Support properties in project name, properties element, comments in properties file and properties in comments file. Patch by Jerome Lacoste

TimeBuild:
----------------------
* Fixed problem where an infinite loop could occur based on interaction with quiet period. Patch by Jerome Lacoste

CruiseControl Release Notes - 2.3

release format:
----------------------
* Add binary release that includes Jetty.

build loop
======================

Accurev:
----------------------
* Add Accurev source control and AccurevBootstrapper. Submitted by Jason Chown and Nicola Orru, patched by Jerome Lacoste

AlienBrain:
----------------------
* Add support for AlienBrain SCM. Submitted by Scott Jacobs
* Add AlienBrainBootstrapper. Submitted by Scott Jacobs

AlwaysBuilder:
----------------------
* Fixed builder to not cause an infinite loop when using a quietperiod of greater than 100 seconds. Patch by Lars Gehrken.

AntBuilder:
----------------------
* Added optional anthome attribute. Can be used in lieu of antscript to make config.xml more portable across environments and more intuitive (than antscript) for new CruiseControl users. Thanks to Paul Hammant for the idea.

AntPublisher:
----------------------